--- a/style.css
+++ b/style.css
@@ -5,21 +5,22 @@
     font-family: sans-serif;
 }
   
+/* Cabeçalho */
 header {
     width: 100%;
     height: 200px;
-    display: column;
     position: absolute;
     text-align: center;
     z-index: 2;
     line-height: 35pt;
     background-color: rgb(36, 25, 87);
-    font-size: 40pt;
+    font-size: 24pt;
     color: rgb(245, 245, 245);
     border-bottom-right-radius: 5%;
     border-bottom-left-radius: 5%;
 }
 
+/* Itens da lista */
 #logo {
     max-width: 100%;
     height: auto;
@@ -54,7 +55,7 @@ a:active {
     color: rgb(127, 129, 180);
 }
 
-.container { 
+.container-links { 
     width: 100%;
     text-align: center;
     position: absolute;
@@ -73,4 +74,16 @@ a:active {
     height: auto;
     object-fit: contain;
     height: 18pt;
+}
+
+/* dados da loja */
+
+.info {
+    position: absolute;
+    text-align: center;
+    margin-top: 341px;
+}
+
+hr {
+    border-width: 100%;
 }
